--- a/iOS/packages.config
+++ b/iOS/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="3.13.8" targetFramework="xamarinios10" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="xamarinios10" />
-  <package id="Xamarin.Forms" version="1.5.1.6471" targetFramework="xamarinios10" />
-  <package id="Xamarin.TestCloud.Agent" version="0.16.2" targetFramework="xamarinios10" />
+  <package id="Xamarin.Forms" version="2.3.3.193" targetFramework="xamarinios10" />
+  <package id="Xamarin.TestCloud.Agent" version="0.20.3" targetFramework="xamarinios10" />
 </packages>
