--- a/tdlr/packages.config
+++ b/tdlr/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="portable-net45+win+wp80+MonoTouch10+MonoAndroid10+xamarinmac20+xamarinios10" />
-  <package id="Xamarin.Forms" version="1.5.1.6471" targetFramework="portable-net45+win+wp80+MonoTouch10+MonoAndroid10+xamarinmac20+xamarinios10" />
+  <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="3.13.8" targetFramework="portable45-net45+win8" />
+  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="portable45-net45+win8" />
+  <package id="Xamarin.Forms" version="2.3.3.193" targetFramework="portable45-net45+win8" />
 </packages>
